--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "self-directed-fe-starter",
   "version": "1.0.0",
+  "engines": {
+    "node": "11.2.0",
+    "npm": "6.x"
+  },
   "description": "Starter kit for Turing School's BEE M4 Self-Directed Project",
   "main": "index.js",
   "proxy": "https://localhost:3000/",
